--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,11 @@ spring.mail.password=ztny uldy kgii qomg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.datasource.hikari.minimum-idle=40
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.auto-commit=true
+
+
 
 
 
